syntax = "proto3";

package user;

option go_package = "./proto";

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message TokenResponse {
  string token = 1;
}

message UserResponse {
  uint64 Id = 1;
  string Email = 2;
  string Name = 3;
}

service User {
  rpc Register(RegisterRequest) returns (UserResponse);
  rpc Login(LoginRequest) returns (TokenResponse);
}